# ChangeLog for eclass directory
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.1343 2014/08/06 08:25:02 swift Exp $

  06 Aug 2014; Sven Vermeulen <swift@gentoo.org> selinux-policy-2.eclass:
  Add support for different GIT repositories with SELinux policy ebuilds

  05 Aug 2014; Johannes Huber <johu@gentoo.org> cmake-utils.eclass:
  Raise CMAKE_MIN_VERSION to 2.8.12 by Ben Kohler <bkohler@gmail.com>, bug
  #519158.

  05 Aug 2014; Christoph Junghans <ottxor@gentoo.org> apache-2.eclass:
  added prefix support (bug #433736)

  05 Aug 2014; Mike Gilbert <floppym@gentoo.org> toolchain.eclass:
  Another typo.

  05 Aug 2014; Robin H. Johnson <robbat2@gentoo.org> toolchain.eclass:
  Fix typo.

  05 Aug 2014; Magnus Granberg <zorry@gentoo.org> toolchain.eclass:
  Fix bug #513706 only use ssp on gnu CTARGETS

  03 Aug 2014; Maxim Koltsov <maksbotan@gentoo.org> leechcraft.eclass:
  Remove sourceforge SRC_URI for leechcraft packages, only leechcraft.org is
  used now

  01 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org> mozconfig-v4.eclass:
  Updated mozconfig-v4.eclass to properly support optional IUSE=wifi

  31 Jul 2014; Brian Evans <grknight@gentoo.org> mysql-cmake.eclass,
  mysql-multilib.eclass:
  Update CMake variables to prevent MySQL from setting default CFLAGS
  and features

  31 Jul 2014; Brian Evans <grknight@gentoo.org> mysql-multilib.eclass:
  Update the multilib eclass to match the work done by grobian for mysql-v2
  for prefix.

  30 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> udev.eclass:
  Deprecate the longer udev_get_udevdir() function in favour of the shorter
  get_udevdir(), notably gentoo-x86 has been fully converted

  30 Jul 2014; Robin H. Johnson <robbat2@gentoo.org> apache-2.eclass:
  Handle grsec TPE to ensure apache can compile. $T is group-writable, owned by
  portage, and TPE blocks that.

  29 Jul 2014; Robin H. Johnson <robbat2@gentoo.org> mysql.eclass,