@@ -1,6 +1,15 @@
-DIST adifmerg29.tgz 46239 RMD160 3e6bac7facbc354ac0b9b7b3bdaa44a24d331090 SHA1 60e08ad2a1cb0a840fc89ac8d4b3bdf53a3251de SHA256 8a39955cece9f7b8ffe432e254d48898a81ff745a19871a113a11b2f5435cf34
-DIST adifmerg31.tgz 47460 RMD160 ebf8ec2450182cb92652fa084a89f45751d129e3 SHA1 2ce748c49b096bf2beb6ee080162e18e8e0be4a9 SHA256 7a4ec54c283d0c215508c0e62a0ce922739415c766b77cddd6f3d3a8206ae210
-EBUILD adifmerg-29.ebuild 769 RMD160 3d2357e696a72b50dbaf6cbc9d9b599d01d7f7f7 SHA1 bf396c38d00f4b69d438577d036486b3c160a658 SHA256 16084e66ffc1326ceeee60c460932793c1f1ebead7161c5fa43d10a5d825dd59
-EBUILD adifmerg-31.ebuild 765 RMD160 b2b1ac8aefb2c3985a87050d292c03d8ecbb35e6 SHA1 79f71a235d68e6949c537bade789a0678be595a3 SHA256 f868c7dca969cad440ca8e6aaccaef5711cd6ff1c2302b193ed7c4f7a8c12567
-MISC ChangeLog 1460 RMD160 6c316588b12ba76e1b20339e58549035aecfa8c0 SHA1 1c21e9676419d279e3f973c423e3787996410547 SHA256 f158ab85f56adad149d0f9c9fd3d12f9c13f194422af463d5103c183f3f34f28
-MISC metadata.xml 235 RMD160 f4ff4565289571ee422eccea7fdfefad9ee6be79 SHA1 8bd6a736d788a9b631454c68331b18f94402ea59 SHA256 ae15692b7066faecf636a6f882d1b44a4fb1e6357ba1c0a91b5753d43eb0139d
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST adifmerg31.tgz 47460 SHA256 7a4ec54c283d0c215508c0e62a0ce922739415c766b77cddd6f3d3a8206ae210 SHA512 851a90d4269d79359eb76168d67f980fcbc551ee8ef221e4caaf9ba6fde756aebe03d80670b7cb5e91e20aa5ef81d772ddaedc204b3cf57cfdbb62d593575fa7 WHIRLPOOL 7d53e533703193306482e8e3e9291910931926c5489272d3430993ea245d8cf71069360e06204232b636fa62f4dd1dfe223e5650ab09063fb691af2e3d80205d
+EBUILD adifmerg-31-r1.ebuild 690 SHA256 e759be937947b02d8385cf07e922c0934d7715cda0140b82cbc96887d6211877 SHA512 09d6f24cbcb193b2e6c48436681cba2d97b0859e2a83bb13ca4e530cc6fc3c27ecab999a29cec1fa4505d3cf96841336c78b6e99c1c5687d4ea3432e6ca9987f WHIRLPOOL 4e52e53eed780cd6782fdcdc58461d53330517e7227efc2f67fc1f634f945bac7a41a6b0d0c06f9af10cc0a18bbe5024118b046dd5fd60324ce845be7c200b55
+EBUILD adifmerg-31.ebuild 765 SHA256 f868c7dca969cad440ca8e6aaccaef5711cd6ff1c2302b193ed7c4f7a8c12567 SHA512 556fa45fe44e37d9cf6af1dd777444c0d6329eeea89518c20aec798f02148af3f6a94cdc63c691d52fd5fcbe906f74faea9d288f32a1910d100a54548ef2352e WHIRLPOOL 597ac06d6e5bd5613168ec11c626c2095ed527e2d5bf4a20e7dd93897087d2d046090fcfaa9adb95a7e0b0a63dc3da020975c2a8ca9e20bf2e6d05fd81e4e8d9
+MISC ChangeLog 1615 SHA256 d1ec89fceaf682fcf3c8713e307ba12d2cab2d85e3107676d404ef553dbadf5f SHA512 3fbaaa629b8b4d64533225996e5f908ddbfd9714d93ca043346a62a43d66b641466c368af5eab3faa57e59fba0c953eccaac81e3eef04854eba4951979c403ad WHIRLPOOL 7e3ce672051153b4f6f4bd7bdb21312a73c5e85c1ea789976a895729eab6de62eeadf0e589a854689b61221d8907ed0953079bee061713cd22e6605f3d1227b5
+MISC metadata.xml 235 SHA256 ae15692b7066faecf636a6f882d1b44a4fb1e6357ba1c0a91b5753d43eb0139d SHA512 b9faad5ebd8050835c9acdd103ac79a026077fa2aa89530e6cd0f0c8c5b1afd2cf0fac187a85ed8dc1d901a17157ea0ca468985b2a16099ea49a20cfe25c5ca1 WHIRLPOOL 835fdc49a180de4347ea082036705ed23eac16b53de2cff4b88a876eface5233f3b87cb60fca00e3577862a55fa8f385e117c3493b2ae595e3ec755c8d93fb42
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlPjJMQACgkQQe4uqXYgU9XxvgCdGpyzZXf5shocaswfM5IZGlt2
+vrgAn2XRYtv4aQ0arrMAFmByJnKoZHKO
+=q0IP
+-----END PGP SIGNATURE-----
