@@ -1,6 +1,12 @@
 # ChangeLog for media-radio/adifmerg
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/adifmerg/ChangeLog,v 1.11 2012/06/19 07:30:38 jdhore Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-radio/adifmerg/ChangeLog,v 1.12 2014/08/07 07:03:24 tomjbe Exp $
+
+*adifmerg-31-r1 (07 Aug 2014)
+
+  07 Aug 2014; Thomas Beierlein <tomjbe@gentoo.org> -adifmerg-29.ebuild,
+  +adifmerg-31-r1.ebuild:
+  bump EAPI. remove old
 
   19 Jun 2012; Jeff Horelick <jdhore@gentoo.org> adifmerg-31.ebuild:
   marked x86 per bug 421685
