@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.1343 2014/08/06 08:25:02 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.1344 2014/08/07 07:37:54 polynomial-c Exp $
+
+  07 Aug 2014; Lars Wendler <polynomial-c@gentoo.org> apache-2.eclass:
+  Fixed numerous misquotings by introducing arrays. Removed some useless "die"
+  statements. Thanks to Arfrever for sorting out these issues.
 
   06 Aug 2014; Sven Vermeulen <swift@gentoo.org> selinux-policy-2.eclass:
   Add support for different GIT repositories with SELinux policy ebuilds
